--- a/1. Фремворк Django/Django/pifi/women/templates/women/base.html
+++ b/1. Фремворк Django/Django/pifi/women/templates/women/base.html
@@ -34,11 +34,31 @@
         <!-- это какойто side bar -->
     <td valign="top" class="left-chapters">
     <ul id ="leftchapters">
-        <br>
-        <li class="selected">Все каткгории</li>
-        <li><a href="#">Актрисы</a></li>
-        <li><a href="#">Певицы</a></li>
-        <li><a href="#">Спортсменки</a></li>
+
+        {% if cat_selected == 0 %}
+                <li class="selected">Все категории</li>
+        {% else %}
+                <li><a href="{% url 'home' %}">Все категории</a></li>
+        {% endif %}
+
+
+        {% for c in cats %}
+            {% if c.pk == cat_selected %}
+                <li class="selected">{{c.name}}</li>
+            {% else %}
+                <li><a href="{{ c.get_absolute_url }}">{{c.name}}</a></li>
+            {% endif %}
+        {% endfor %}
+
+
+
+<!--        <br>-->
+<!--        <li class="selected">Все каткгории</li>-->
+<!--        <li><a href="#">Актрисы</a></li>-->
+<!--        <li><a href="#">Певицы</a></li>-->
+<!--        <li><a href="#">Спортсменки</a></li>-->
+
+
         <li class="share">
             <p>Наш канал</p>
         <a class="share-yt" htef="#"></a>
